--- a/index.hmtl.html
+++ b/index.hmtl.html
@@ -7,22 +7,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
- <div class="box" id="box1">
+ <div onclick="evento(event)" class="box" id="box1">
     <h2>Hola</h2>
  </div>
- <div class="box" id="box2">
+ <div onclick="evento(event)" class="box" id="box2">
     <h2>Hola</h2>
  </div>
- <div class="box" id="box3">
+ <div onclick="evento(event)" class="box" id="box3">
     <h2>Hola</h2>
  </div>
- <div class="box" id="box4">
+ <div onclick="evento(event)" class="box" id="box4">
     <h2>Hola</h2>
  </div>
- <div class="box" id="box5">
+ <div onclick="evento(event)" class="box" id="box5">
     <h2>Hola</h2>
  </div>
 
-    <script src="src/js/index.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
