--- a/index.hmtl.html
+++ b/index.hmtl.html
@@ -9,7 +9,7 @@
 <body>
 
  <div onclick="evento(event)" class="box" id="box1">
-   <h2>Paisaje de retiro</h2>
+   <h2>Paisajes</h2>
     
  </div>
  <div onclick="evento(event)" class="box" id="box2">
